--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
                     android:layout_height="50dp"
                     android:layout_column="1"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:layout_weight="15"
                     android:padding="5dp"
                     android:text="@string/process_name"
@@ -45,6 +46,7 @@
                     android:layout_height="50dp"
                     android:layout_column="2"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:layout_weight="20"
                     android:padding="5dp"
                     android:text="@string/arrival_time"
@@ -56,6 +58,7 @@
                     android:layout_height="50dp"
                     android:layout_column="3"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:layout_weight="20"
                     android:padding="5dp"
                     android:text="@string/burst_time"
@@ -123,6 +126,7 @@
         android:background="@drawable/round_primary"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:layout_marginBottom="5dp"
         android:text="Submit"
         android:textAllCaps="false"
         android:textColor="@color/white"
