--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -42,7 +42,7 @@
                 android:text="Change Time Quantum"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:visibility="gone"></Button>
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/time_quantum"
@@ -83,9 +83,9 @@
                                 android:layout_weight="20"
                                 android:gravity="center"
                                 android:padding="5dp"
-                                android:text="PName"
+                                android:text="P No"
                                 android:textColor="@color/colorPrimaryDark"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold" />
 
 
                             <TextView
@@ -94,13 +94,13 @@
                                 android:layout_height="60dp"
                                 android:layout_column="2"
                                 android:layout_gravity="center"
-                                android:layout_marginRight="10dp"
+                                android:layout_marginEnd="10dp"
                                 android:layout_weight="20"
                                 android:gravity="center"
                                 android:padding="5dp"
                                 android:text="AT"
                                 android:textColor="@color/colorPrimaryDark"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/btime"
@@ -114,7 +114,7 @@
                                 android:padding="5dp"
                                 android:text="BT"
                                 android:textColor="@color/colorPrimaryDark"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold" />
 
 
                             <TextView
@@ -129,7 +129,7 @@
                                 android:padding="5dp"
                                 android:text="CT"
                                 android:textColor="@color/colorPrimaryDark"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/tat"
@@ -143,7 +143,7 @@
                                 android:padding="5dp"
                                 android:text="TAT"
                                 android:textColor="@color/colorPrimaryDark"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/wt"
@@ -157,7 +157,7 @@
                                 android:padding="5dp"
                                 android:text="WT"
                                 android:textColor="@color/colorPrimaryDark"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/prior"
@@ -171,7 +171,7 @@
                                 android:text="Priority"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textStyle="bold"
-                                android:visibility="invisible"></TextView>
+                                android:visibility="invisible" />
 
                         </TableRow>
 
@@ -180,7 +180,7 @@
                             android:id="@+id/sum_row"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"></LinearLayout>
+                            android:orientation="vertical" />
                     </TableLayout>
                 </HorizontalScrollView>
 
@@ -198,7 +198,7 @@
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"></Button>
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/avgTurnAround"
