--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="-4dp"
         android:layout_marginEnd="1dp"
-        android:src="@drawable/screen"
+        android:src="@drawable/logo10"
         android:visibility="visible" />
 
 </RelativeLayout>
